# rolypoly

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PARALLELIZATION_ANALYSIS.md  PERFORMANCE_RESULTS.md  PROJECT_REVIEW.md  README.md  SCORECARD.md  SECURITY.md  build.rs  deny.toml  dev  icon-generator.html  plan.md  rustfmt.toml  rusty.code-workspace  tauri.conf.json  test_gui_comprehensive.py  ui_dev_plan.md
.githooks/: pre-commit
.github/workflows/: ci.yml  cross-platform-build.yml  gui.yml  quality.yml  release-gui-macos.yml  release-gui.yml  release.yml  web-deploy.yml
GUI_design/: gui_spec.md
benches/: list_benchmark.rs  performance_benchmark.rs  rolypoly.code-workspace
gui/: README.md  pubspec.yaml
gui/.dart_tool/: package_config.json  package_graph.json
gui/.dart_tool/extension_discovery/: vs_code.json
gui/lib/: main.dart
gui/lib/features/: compress.dart  extract.dart  inspect.dart  validate_stats.dart
gui/lib/services/: fs_save.dart  fs_save_desktop.dart  fs_save_web.dart  rolypoly_cli.dart  web_download.dart  web_download_html.dart  web_download_stub.dart  web_zip_read.dart  web_zip_service.dart
gui/lib/widgets/: drop_area.dart  drop_area_desktop.dart  drop_area_web.dart
gui/test/: widget_test.dart
icons/: icon.icns
scripts/: build-release.sh  changelog.sh  gui_dev.sh  release.sh  scorecard.sh  setup-hooks.sh  test_all.sh
src/: archive.rs  build_info.rs  cli.rs  gui.rs  gui_improved.rs  gui_manager.rs  lib.rs  main.rs  operations.rs  progress.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: cli_basic.rs  e2e_tests.rs  gui_component_tests.rs  gui_integration_tests.rs  gui_stress_tests.rs  gui_ui_tests.rs  integration_tests.rs  json_output.rs  security_tests.rs  stress_test.rs  test_helpers.rs  ui_cli_parity_tests.rs  validate_perf.rs  validation_tests.rs
ui/: appwindow.slint  gui_dev_tasks.md  gui_spec.md  index.html  script.js  settings.html  simple.html  style.css  ui_dev_plan.md
