[package]
name = "rusty"
version = "0.1.0"
edition = "2024"
description = "A modern, cross-platform ZIP archiver written in Rust"
authors = ["Claude Code Assistant"]
license = "MIT"
homepage = "https://github.com/user/rusty"
repository = "https://github.com/user/rusty"
readme = "README.md"
keywords = ["zip", "archive", "compression", "cli"]
categories = ["command-line-utilities", "compression"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
slint = "1.4.1"
rfd = "0.14.1"
arboard = "3.3.0"

[dev-dependencies]
tempfile = "3.10"

[[bench]]
name = "performance_benchmark"
harness = false

[lib]
name = "rusty"
path = "src/lib.rs"

[[bin]]
name = "rusty"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.8"
