[package]
name = "rolypoly"
version = "0.1.0"
edition = "2024"
description = "A modern, cross-platform ZIP archiver written in Rust"
authors = ["Claude Code Assistant"]
license = "MIT"
homepage = "https://github.com/user/rolypoly"
repository = "https://github.com/user/rolypoly"
readme = "README.md"
keywords = ["zip", "archive", "compression", "cli"]
categories = ["command-line-utilities", "compression"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
zip = "4.2.0"
walkdir = "2.5.0"
indicatif = "0.18.0"
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"

[[bench]]
name = "performance_benchmark"
harness = false

[lib]
name = "rolypoly"
path = "src/lib.rs"

[[bin]]
name = "rolypoly"
path = "src/bin/rolypoly.rs"

[features]
default = []
gui = []
