[package]
name = "rusty-app"
version = "0.1.0"
description = "Modern ZIP Archiver"
authors = ["Claude Code Assistant"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Include the main rusty library
rusty = { path = ".." }

[[bin]]
name = "rusty-app"
path = "src/main.rs"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
